--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -1,10 +1,8 @@
 @charset "UTF-8";
 
-/* * {
-    margin: 0 auto;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-} */
+* {
+    scroll-behavior: auto !important;
+}
 
 body {
     background-color: #F5F5F5;
